app/assets/stylesheets/custom/navigation.css
.nav-link {
  @apply rounded px-3 py-4 text-slate-500 focus:text-indigo-600 md:inline-block block relative md:text-sm text-base font-medium hover:transition hover:duration-300 hover:ease-in-out hover:text-slate-700 dark:text-slate-200 dark:hover:text-slate-300 dark:focus:text-white;
}

.nav-link-active {
  @apply text-indigo-600 hover:text-indigo-600 relative hover:transition hover:duration-300 hover:ease-in-out dark:hover:text-indigo-400 dark:text-indigo-500;
}

.nav-link-destructive {
  @apply text-rose-600 focus:text-rose-600 hover:text-rose-500 dark:text-rose-600 dark:hover:text-rose-500 dark:focus:text-rose-500;
}

.nav-link:hover::after,
.nav-link-active::after {
  @apply content-[''] block h-[2px] w-full left-0 absolute -bottom-px transition duration-300 ease-in-out bg-indigo-600 hover:transition hover:duration-300 dark:bg-indigo-500;
}

.nav-link-destructive:hover::after {
  @apply content-[''] block h-[2px] w-full left-0 absolute -bottom-px transition duration-300 ease-in-out bg-rose-600 hover:transition hover:duration-300 dark:bg-rose-500;
}

/* Dark */
.nav-link-dark {
  @apply rounded text-slate-100 focus:text-white md:inline-block block relative md:text-sm text-base font-medium hover:transition hover:duration-300 hover:ease-in-out hover:text-slate-100  dark:text-slate-200 dark:hover:text-slate-100 hover:bg-slate-700 dark:hover:bg-slate-700 hover:rounded py-2 px-3;
}

.nav-link-dark.nav-link-active {
  @apply rounded py-2 px-3 bg-indigo-600 hover:bg-indigo-700 focus:ring-indigo-600/20 text-white;
}

.nav-link-dark.nav-link-active:after {
  @apply hidden;
}

